[gd_scene load_steps=10 format=3 uid="uid://dax51qj8537fu"]

[ext_resource type="Script" path="res://player_load/items/boomerang/boomerang.gd" id="1_xihq8"]
[ext_resource type="PackedScene" uid="uid://d76e3mymdegt" path="res://player_load/items/boomerang/catch/catch_point.tscn" id="3_gbkgd"]
[ext_resource type="Texture2D" uid="uid://paft1dx3f5h2" path="res://player_load/items/boomerang/boomerang_anim.png" id="3_o4j2n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ahs40"]
atlas = ExtResource("3_o4j2n")
region = Rect2(0, 0, 8, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqyqv"]
atlas = ExtResource("3_o4j2n")
region = Rect2(8, 0, 8, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5xq6"]
atlas = ExtResource("3_o4j2n")
region = Rect2(16, 0, 8, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlayj"]
atlas = ExtResource("3_o4j2n")
region = Rect2(24, 0, 8, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_pbkru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahs40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqyqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5xq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlayj")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v0jr3"]
size = Vector2(11, 12)

[node name="boomerang" type="Node2D" node_paths=PackedStringArray("throw_timer", "hang_timer", "exp_timer")]
script = ExtResource("1_xihq8")
throw_timer = NodePath("throw_timer")
hang_timer = NodePath("hang_timer")
exp_timer = NodePath("exp_timer")

[node name="boomerang_anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pbkru")
autoplay = "default"
frame = 2
frame_progress = 0.992182

[node name="hang_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="throw_timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="exp_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="hit_shape" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="boom_shape" type="CollisionShape2D" parent="hit_shape"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_v0jr3")

[node name="catch_point" parent="." node_paths=PackedStringArray("catch_target") instance=ExtResource("3_gbkgd")]
catch_target = NodePath(".")

[connection signal="timeout" from="hang_timer" to="." method="_on_hang_timer_timeout"]
[connection signal="timeout" from="throw_timer" to="." method="_on_throw_timer_timeout"]
[connection signal="timeout" from="exp_timer" to="." method="_on_exp_timer_timeout"]
[connection signal="caught" from="catch_point" to="." method="_on_catch_point_caught"]
